cabal-version:      2.0
name:               agent-workflow
version:            0.1.0
synopsis:           Big-step interpreter and parser for the Agent Workflow Language
build-type:         Simple

executable awl
    main-is:          Main.hs
    other-modules:    Syntax
                    , Parser
                    , Interpreter
    build-depends:    base          >= 4.10 && < 5
                    , parsec        >= 3.1
                    , containers
                    , http-conduit  >= 2.3
                    , aeson         >= 2.0
                    , bytestring
                    , text
                    , vector
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-do-bind
